# ReactChatBot

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml
backend/: main.py  mcp.json  pyproject.toml
backend/agents/: react_agent.py
backend/memory/: __init__.py  file_backend.py  history_summary.py  memory_manager.py
backend/schemas/: __init__.py  agent_config.py  chat_request.py  user.py
backend/tools/: __init__.py  base_tool.py  bing_client.py  calculator_tool.py  date_tool.py  mcp_loader.py  mcp_result_formatter.py  mcp_tool_adapter.py  qweather_client.py  weather_tool.py  web_search_tool.py
backend/tools/mcp/: __init__.py  enhanced_tool.py  loader.py  project_client.py  servers.py
docker/: nginx.conf  start.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AgentTurnBubble.vue  ChatArea.vue  CollapsibleStep.vue  Layout.vue  LoadingBubble.vue  MarkdownRenderer.vue  MessageBubble.vue  ShareView.vue  Sidebar.vue  ThemeToggle.vue  UsernameSetupModal.vue
frontend/src/composables/: useTheme.js
frontend/src/services/: api.js
frontend/src/utils/: formatContent.js  formatTrainContent.js  messageTimestamp.js  messageUtils.js  sessionUtils.js  shareUtils.js  theme.js  userStorage.js
memory/: in_memory_backend.py  memory_manager.py
schemas/: __init__.py  chat_message.py
tools/: __init__.py  base_tool.py  web_search_tool.py
