[project]
name = "agentscope-proj"
version = "0.1.0"
description = "FastAPI + AgentScope-based LLM chat API with SSE streaming, session memory, and OpenAI-compatible format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=1.0.20",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
]
